[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tokenly"
version = "0.2.2"
description = "One line to track every AI API cost. Sentry for AI costs."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Deependra Vishwakarma", email = "dvip34456@gmail.com" },
]
requires-python = ">=3.10"
keywords = ["llm", "openai", "anthropic", "gemini", "cost", "tokens", "tracking", "observability", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/deependra04/tokenly"
Repository = "https://github.com/deependra04/tokenly"
Issues = "https://github.com/deependra04/tokenly/issues"

[project.scripts]
tokenly = "tokenly.cli:main"

[project.optional-dependencies]
mysql = ["PyMySQL>=1.1"]
postgres = ["psycopg[binary]>=3.1"]
otel = ["opentelemetry-api>=1.25.0"]
dev = ["pytest>=8.0", "ruff>=0.5", "mypy>=1.10"]

[tool.hatch.build.targets.wheel]
packages = ["src/tokenly"]

[tool.hatch.build.targets.wheel.force-include]
"src/tokenly/pricing.json" = "tokenly/pricing.json"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
